--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
     "modernizr": "~2.8.1",
     "sass-rem": "^2.0.0",
     "animate.css": "^3.5.2",
-    "scrollreveal": "^3.3.6",
-    "flag-icon-css": "^2.9.0"
+    "scrollreveal": "^3.3.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
