--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "modernizr": "~2.8.1",
     "sass-rem": "^2.0.0",
     "animate.css": "^3.5.2",
-    "scrollreveal": "^3.3.6"
+    "scrollreveal": "^3.3.6",
+    "jquery-bar-rating": "^1.2.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
