--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "sass-rem": "^2.0.0",
     "animate.css": "^3.5.2",
     "scrollreveal": "^3.3.6",
-    "jquery-bar-rating": "^1.2.2"
+    "jquery-bar-rating": "^1.2.2",
+    "bootstrap-datepicker": "^1.7.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
