--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ dist
 bower_components
 test/bower_components
 .DS_Store
-/app/images/.DS_Store
-/app/.DS_Store
-/.DS_Store
+.DS_Store?
+'.DS_Store
+app/styles/.DS_Store
